# bgfx_playground

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bgfx_utils.h  color_las_loader.cpp  color_las_loader.h  main.cpp
.github/workflows/: cmake-multi-platform.yml
shaders/: vs_triangle.sc
